# dispatcher

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  font_panel.rs  lib.rs  pty_manager.rs
src/components/Layout/: ProjectView.tsx
src/components/Sidebar/: GroupNode.tsx  ProjectNode.tsx  Sidebar.tsx  TerminalNode.tsx
src/components/Terminal/: DetailPanel.tsx  TerminalPane.tsx
src/components/common/: FontSettings.tsx  HotkeyHelp.tsx  KeyDebugOverlay.tsx  SchemePicker.tsx  StatusDot.tsx
src/hooks/: useTerminalBridge.ts  useTerminalScreenshotMonitor.ts  useWakeRecovery.ts
src/hooks/__tests__/: useTerminalBridge.test.ts  useTerminalScreenshotMonitor.test.ts
src/lib/: appStateSnapshot.ts  colorSchemes.ts  dragState.ts  fontDetection.ts  keyboardShortcuts.ts  screenshotDebug.ts  statusDebug.ts  statusResizeSuppression.ts  storageNamespace.ts  tauriCommands.ts  terminalCloseFocus.ts  terminalLinks.ts  terminalScreenshotStatus.ts  tmuxControl.ts  tmuxControlProtocol.ts  tmuxWindowOrder.ts
src/lib/__tests__/: appStateSnapshot.test.ts  dragState.test.ts  keyboardShortcuts.test.ts  storageNamespace.test.ts  terminalCloseFocus.test.ts  terminalLinks.test.ts  terminalScreenshotStatus.test.ts  tmuxControl.test.ts  (+2 more)
src/stores/: useColorSchemeStore.ts  useFontStore.ts  useLayoutStore.ts  useProjectStore.ts  useTerminalStore.ts  useUiStore.ts
src/test/: setup.ts
src/types/: colorScheme.ts
(+3 files in other folders)
