[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "DevDispatcher"
path = "src/main.rs"

[lib]
name = "dispatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
